<resources>
    <string-array name="age_groups_array">
        <item>0-5</item>
        <item>6-11</item>
        <item>12-17</item>
        <item>18-99</item>
    </string-array>

    <string name="app_name">Travelling</string>
    <string name="onboard_titulo1">Tu App de Viajes</string>
    <string name="in_construction_text">funcionalidad en construcción</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_usuari_hint">Usuario</string>
    <string name="account_create_action_text">Crear una</string>
    <string name="account_create_text">Tienes una cuenta?</string>
    <string name="pwd_forgot_action_text">Recuperar</string>
    <string name="pwd_forgot_text">Olvidó contraseña?</string>
    <string name="login_titulo">Autenticación</string>
    <string name="next_button">Siguiente</string>
    <string name="home_title">Próximos encuentros</string>
    <string name="card2_subtitle">Maldivas, 3 semanas</string>
    <string name="btn_camera">camera</string>
    <string name="btn_fav">favourite</string>
    <string name="btn_terrain">terrain</string>
    <string name="btn_face">face</string>
    <string name="card1_subtitle">USA, los Angeles 2 semanas</string>
    <string name="card2_title">Vacaciones en la playa</string>
    <string name="card1_title">Ciudad de los Angeles</string>
    <string name="onboard_descripcion">Hola! estamos buscando a usuarios con inquietudes y ganas de viajar.         Si eres tú? no lo dudes, accede a nuestra app y descubrirá miles de destinos y facilidades para alquilar coches, ver el tiempo, etc</string>
    <string name="in_construction_text_handler">in construction</string>
    <string name="label_spinner_text">Seleccione destino</string>
    <string name="new_account_label">Registro</string>
    <string name="account_name_hint">¿Cómo te llamas?</string>
    <string name="account_surname_hint">¿Y tu apellido?</string>
    <string name="account_age_hint">¿Cuántos años tienes?</string>
    <string name="error_text_name">Ups, no creo que sea correcto, revísalo</string>
    <string name="error_age">Esta app no es para ti</string>
    <string name="pointme">Me apunto</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="account_create_conditions">Ver Condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">wellcome to the lile fragment!</string>
    <string name="usuario_incorrecto_text">Login incorrecto, verifique los datos</string>
    <string name="acepta_text">Entendido</string>
    <string name="login_data_prefix">Tenemos usuario:</string>
    <string name="hello_blank_fragment1">wellcome to de blue fragment!</string>
</resources>