<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
        <TextView
            android:id="@+id/onboard_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lavanda1"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/onboard_titulo1"
            android:textAppearance="?textAppearanceHeadline4"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <TextView
            android:id="@+id/onboard_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lavanda1"
            android:gravity="center_horizontal"
            android:paddingHorizontal="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/onboard_descripcion"
            android:lineSpacingExtra="5sp"
            android:textAppearance="?appTravellingBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboard_title1"></TextView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/nomads_img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/lavanda1"
        android:scaleType="centerInside"
        android:src="@drawable/nomads_moto_cel_1"
        app:layout_constraintBottom_toTopOf="@+id/onboard_button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboard_descripcion"
        app:shapeAppearanceOverlay="@style/RoundedBottom"></com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/onboard_button_next"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/black"
            android:text="@string/next_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>



